@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMacOSXDraw.c,v 1.27 2007/06/29 03:20:01 das Exp $
+ * RCS: @(#) $Id: tkMacOSXDraw.c,v 1.28 2007/07/02 13:05:14 das Exp $
  */
 
 #include "tkMacOSXPrivate.h"
@@ -1630,7 +1630,7 @@ TkMacOSXRestoreDrawingContext(TkMacOSXDrawingContext *dc)
 	if (dc->port) {
 	    ChkErr(QDEndCGContext, dc->port, &(dc->context));
 	}
-    } else {
+    } else if (dc->port) {
 	if (!tkPictureIsOpen) {
 	    HidePen();
 	}
